# kafka-lite

./: Cargo.toml  baseline_results.txt
benches/: broker_bench.rs  log_bench.rs
src/: lib.rs  main.rs  queue.rs  server.rs
src/protocol/: request.rs  response.rs
src/store/: broker.rs  log.rs  mod.rs  offset.rs  topic.rs
