[package]
name = "kafka-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
kafka-lite-protocol = { path = "../kafka-lite-protocol" }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "log_bench"
harness = false

[[bench]]
name = "broker_bench"
harness = false
